# obs-face-tracker

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-request.md
.github/containers/fedora-common/: build.sh
.github/containers/fedora-template/: Dockerfile  build.sh
.github/workflows/: clang-format.yml  docker-build.yml  main.yml
ci/: ci_includes.sh.in  download-dlib-models.sh  forum-update-info.json  plugin.spec
ci/common/: dlib-cmake-no-openblasp.patch  dlib-slim.patch
ci/linux/: build-ubuntu.sh  install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: Brewfile  build-macos.sh  change-rpath.py  change-rpath.sh  download-extract.sh  download-openblas-arm64.sh  install-build-obs-macos.sh  install-packagesbuild.sh  obs-studio-build.patch  package-dmg.json.template  package-macos.sh
ci/windows/: package-windows.cmd  prepare-obs-windows.cmd  prepare-windows.cmd
cmake/: ObsPluginHelpers.cmake
data/: face-tracker.effect
data/locale/: en-US.ini
data/ptz/: ptz-http-backend-camera-models.json
doc/: properties-ptz.md  properties.md
installer/: installer-Windows.iss.in  installer-macOS.pkgproj.in
packaging/debian/: changelog  control  copyright  rules
src/: dummy-backend.cpp  dummy-backend.hpp  face-detector-base.cpp  face-detector-base.h  face-detector-dlib-cnn.cpp  face-detector-dlib-cnn.h  face-detector-dlib-hog-datagen.cpp  face-detector-dlib-hog.cpp  face-detector-dlib-hog.h  face-detector-dlib.cpp  face-detector-dlib.h  face-tracker-base.cpp  face-tracker-base.h  face-tracker-dlib.cpp  face-tracker-dlib.h  face-tracker-manager.cpp  face-tracker-manager.hpp  face-tracker-monitor.cpp  face-tracker-preset.cpp  face-tracker-preset.h  face-tracker-ptz.cpp  face-tracker-ptz.hpp  face-tracker.cpp  face-tracker.hpp  helper.cpp  helper.hpp  libvisca-thread.cpp  libvisca-thread.hpp  module-main.c  obsptz-backend.cpp  obsptz-backend.hpp  plugin-macros.h.in  plugin-main.c  ptz-backend.cpp  ptz-backend.hpp  ptz-http-backend.cpp  ptz-http-backend.hpp  source_list.cc  source_list.h  texture-object.cpp  (+1 more)
ui/: face-tracker-dock-internal.hpp  face-tracker-dock.cpp  face-tracker-dock.hpp  face-tracker-widget.cpp  face-tracker-widget.hpp  obsgui-helper.hpp
